# rsomics-graph-properties

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: c4.txt  c5.txt  cycle_tail.txt  gnm_2000_8000_s1.txt  gnm_30_22_s1.txt  gnm_60_90_s7.txt  karate.txt  path4.txt  star5.txt  triangle.txt  triangle_selfloop.txt  two_edges.txt  two_paths.txt
