[package]
name = "rsomics-graph-properties"
version = "0.1.0"
edition = "2021"
description = "Undirected graph-property predicates (bipartite / eulerian / tree / forest / regular) — value-exact port of networkx boolean graph invariants"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-graph-properties"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bioinformatics", "graph", "network", "bipartite", "networkx"]
readme = "README.md"

[[bin]]
name = "rsomics-graph-properties"
path = "src/main.rs"

[lib]
name = "rsomics_graph_properties"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "bench"
harness = false
